<resources>
    <string name="app_name">ElearningApp</string>
    <string name="title_login">Bienvenido</string>
    <string name="title_signup">¡Comencemos!</string>
    <string name="subtitle_login">Inicie sesión en su cuenta existente de e-learning</string>
    <string name="subtitle_signup">Crea una cuenta de e-learning para obtener todas las características</string>
    <string name="input_email_login">Nombre de usuario</string>
    <string name="input_password_login">Contraseña</string>
    <string name="input_name_signup">Nombre</string>
    <string name="input_email_signup">Correo electrónico</string>
    <string name="input_mobile_signup">Número de teléfono</string>
    <string name="input_createpass_signup">Crear contraseña</string>
    <string name="input_confirmpass_signup">Confirmar contraseña</string>
    <string name="title_forgot_login">¿Olvidó su contraseña?</string>
    <string name="title_button_login">Iniciar sesión</string>
    <string name="title_button_signup">Registrate</string>
    <string name="subtitle_button_login">O conéctese usando</string>
    <string name="title_footer_signup">¿Ya tienes una cuenta?</string>
    <string name="title_footer_login">¿No tienes una cuenta?</string>
    <string name="title_footer_signup_login">Registrarse</string>
    <string name="title_footer_login_signup">Inicia sesión ahora</string>>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_confirmpass_newpass">Confirmar nueva contraseña</string>
    <string name="title_button_update">Actualizar</string>
    <string name="title_button_update2">Actualizar</string>
    <string name="title_profile_edit">Cambiar la información del perfil</string>
    <string name="title_profile_change_pass">Cambiar contraseña</string>
    <string name="title_profile_logout">Cerrar sesión</string>
    <string name="title_profile">Editar perfil</string>
    <string name="input_createpass_newpass">Crear nueva contraseña</string>
    <string name="name_course">Curso</string>
    <string name="tvDuration">10</string>
    <string name="tv_price">10</string>
    <string name="buttonDesign">Diseño</string>
    <string name="buttonProg">Programación</string>
    <string name="buttonWeb">Desarrollo Web</string>
    <string name="buttonAll">Ver todo</string>
    <string name="text_fragment_courses">Cursos disponibles</string>
    <string name="buys">Mis cursos</string>
    <string name="buttonBuy">Comprar</string>
    <string name="buttonPlay">Ver curso</string>
    <string name="title_fragment_home">Inicio</string>
    <string name="title_fragment_course">Mis cursos</string>

    <!--  CONEKTA  -->
    <string name="XXXX">XXXX-XXXX-XXXX-XXXX</string>
    <string name="cardNumber">Número de tarjeta:</string>
    <string name="cardName">Nombre que aparece en la tarjeta:</string>
    <string name="expire">Expiración:</string>
    <string name="cardCvc">Código de seguridad:</string>
    <string name="mm">MM</string>
    <string name="yyyy">AAAA</string>
    <string name="name">Name</string>
    <string name="cvc">CVC</string>
    <string name="outputData">Output data:</string>
    <string name="outputTokenData">Token output</string>
    <string name="outputUUIDData">UUID output</string>
    <string name="needInternetConnection">You need internet connection</string>
    <string name="cardDataIncomplete">Incomplete card data!</string>
    <string name="theTokenIdLabel">Token:</string>
    <string name="errorLabel">Error:</string>
    <string name="uuidDeviceLabel">UUID:</string>
    <string name="button_gallery">Galería</string>
    <string name="button_cam">Cámara</string>
    <string name="tv_change_pass">Cambiar contraseña</string>
</resources>