<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".ui.view.ChangePassActivity">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_baseline_account"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_edit_profile"/>


    <TextView
        android:id="@+id/tv_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="24dp"
        android:text="@string/tv_change_pass"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_editext"
        android:hint="@string/title_profile_change_pass"
        android:inputType="text"
        android:textColor="#B6B6B6"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_profile"
        app:layout_constraintBottom_toTopOf="@id/et_mobile"/>


    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_editext"
        android:hint="@string/input_confirmpass_newpass"
        android:inputType="number"
        android:textColor="#B6B6B6"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintBottom_toTopOf="@id/button_save"/>


    <Button
        android:id="@+id/button_save"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:text="@string/title_button_update"
        android:backgroundTint="@color/orange_dark"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile"
        app:layout_constraintVertical_bias="0.594" />

</androidx.constraintlayout.widget.ConstraintLayout>