<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.HomeFragment">

    <!--    <Button-->
    <!--        android:id="@+id/btnVer"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Ver"/>-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarHome"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/title_fragment_home"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CoursesFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_fragment_courses"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Categoría" />

            <HorizontalScrollView
                android:id="@+id/horizon_layout"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="1dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonDesign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/blue"
                        android:drawableLeft="@drawable/baseline_design_services_24"
                        android:text="@string/buttonDesign"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/buttonProgrammation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="#CD8025"
                        android:drawableLeft="@drawable/baseline_code_24"
                        android:text="@string/buttonProg"
                        app:layout_constraintStart_toEndOf="@+id/buttonDesign" />

                    <Button
                        android:id="@+id/buttonWeb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/green"
                        android:drawableLeft="@drawable/baseline_web_24"
                        android:text="@string/buttonWeb"
                        app:layout_constraintStart_toStartOf="@+id/buttonProgrammation" />

                    <Button
                        android:id="@+id/buttonAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="#D8D3E1"
                        android:text="@string/buttonAll"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/buttonProgrammation"
                        tools:text="Ver Todo" />
                </LinearLayout>
            </HorizontalScrollView>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/horizon_layout"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <include layout="@layout/list_item_shimmer"/>
                    <include layout="@layout/list_item_shimmer"/>
                    <include layout="@layout/list_item_shimmer"/>
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/horizon_layout"
                tools:listitem="@layout/cardview_course" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>