<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_account"
            app:layout_constraintBottom_toTopOf="@id/linearParent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_profile">

            <ImageView
                android:id="@+id/image_edit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_edit_24" />

            <TextView
                android:id="@+id/tv_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintVertical_chainStyle="packed" />
        </LinearLayout>


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_editext"
            android:drawableLeft="@drawable/ic_baseline_account"
            android:hint="@string/input_name_signup"
            android:inputType="text"
            android:textColor="#B6B6B6"
            app:layout_constraintBottom_toTopOf="@id/et_email_address"
            app:layout_constraintTop_toBottomOf="@id/linearParent" />

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_editext"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:hint="@string/input_email_signup"
            android:inputType="textEmailAddress"
            android:textColor="#B6B6B6"
            app:layout_constraintBottom_toTopOf="@id/et_mobile"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_editext"
            android:drawableLeft="@drawable/ic_baseline_smartphone"
            android:hint="@string/input_mobile_signup"
            android:inputType="number"
            android:textColor="#B6B6B6"
            app:layout_constraintBottom_toTopOf="@id/button_save"
            app:layout_constraintTop_toBottomOf="@id/et_email_address" />


        <Button
            android:id="@+id/button_save"
            android:layout_width="160dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/orange_dark"
            android:text="@string/title_button_update"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_mobile"
            app:layout_constraintVertical_bias="0.594" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>